# plivo-stream-sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: fastapi_example.py  websockets_example.py
examples/demo/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  server.py  utils.py
